add Venice Credit

--- a/src/main/resources/assets/venicemod/lang/en_US.lang
+++ b/src/main/resources/assets/venicemod/lang/en_US.lang
@@ -15,6 +15,8 @@ item.nifeOpKiller.name=OP Killer
 
 item.foodAppleAndBread.name=Apple And Bread
 
+item.coinVeniceCredit.name=Venice Credit
+
 tile.oreAluminumBauxite.name=Bauxite
 tile.oreScandium.name=Scandium Ore
 tile.oreTitanium.name=Titanium Ore
